--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
           </div>
           <div class="col-lg-auto tarjeta naranja p-0 d-flex justify-content-center">
-            <a href="descargas/66410054 - Manejo de la información turistica.pdf" target="_blank" class="boton-footer py-4 px-5 button-jittery">
+            <a href="descargas/66410054-Manejo_de_la_informacion_turistica.pdf" target="_blank" class="boton-footer py-4 px-5 button-jittery">
               <div class="contenido__footer__item">
                 <div class="contenido__footer__item__img me-3"><img src="./assets/ico-descarga.svg"
                     style="width: 62px" />
